fix some fucking errors
