# generated/java/src/main/java/com/blizzardapi/openapi/model/RealmsIndexDTO.java
@@ -54,37 +54,37 @@ import com.blizzardapi.JSON;
  */
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
 public class RealmsIndexDTO {
-  public static final String SERIALIZED_NAME_CLASSES = "classes";
-  @SerializedName(SERIALIZED_NAME_CLASSES)
-  private List<IndexRealmDataDTO> classes = new ArrayList<>();
+  public static final String SERIALIZED_NAME_REALMS = "realms";
+  @SerializedName(SERIALIZED_NAME_REALMS)
+  private List<IndexRealmDataDTO> realms = new ArrayList<>();
 
   public RealmsIndexDTO() {
   }
 
-  public RealmsIndexDTO classes(List<IndexRealmDataDTO> classes) {
-    this.classes = classes;
+  public RealmsIndexDTO realms(List<IndexRealmDataDTO> realms) {
+    this.realms = realms;
     return this;
   }
 
-  public RealmsIndexDTO addClassesItem(IndexRealmDataDTO classesItem) {
-    if (this.classes == null) {
-      this.classes = new ArrayList<>();
+  public RealmsIndexDTO addRealmsItem(IndexRealmDataDTO realmsItem) {
+    if (this.realms == null) {
+      this.realms = new ArrayList<>();
     }
-    this.classes.add(classesItem);
+    this.realms.add(realmsItem);
     return this;
   }
 
    /**
-   * Get classes
-   * @return classes
+   * Get realms
+   * @return realms
   **/
   @javax.annotation.Nonnull
-  public List<IndexRealmDataDTO> getClasses() {
-    return classes;
+  public List<IndexRealmDataDTO> getRealms() {
+    return realms;
   }
 
-  public void setClasses(List<IndexRealmDataDTO> classes) {
-    this.classes = classes;
+  public void setRealms(List<IndexRealmDataDTO> realms) {
+    this.realms = realms;
   }
 
   /**
@@ -142,20 +142,20 @@ public class RealmsIndexDTO {
       return false;
     }
     RealmsIndexDTO realmsIndexDTO = (RealmsIndexDTO) o;
-    return Objects.equals(this.classes, realmsIndexDTO.classes)&&
+    return Objects.equals(this.realms, realmsIndexDTO.realms)&&
         Objects.equals(this.additionalProperties, realmsIndexDTO.additionalProperties);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(classes, additionalProperties);
+    return Objects.hash(realms, additionalProperties);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class RealmsIndexDTO {\n");
-    sb.append("    classes: ").append(toIndentedString(classes)).append("\n");
+    sb.append("    realms: ").append(toIndentedString(realms)).append("\n");
     sb.append("    additionalProperties: ").append(toIndentedString(additionalProperties)).append("\n");
     sb.append("}");
     return sb.toString();
@@ -179,11 +179,11 @@ public class RealmsIndexDTO {
   static {
     // a set of all properties/fields (JSON key names)
     openapiFields = new HashSet<String>();
-    openapiFields.add("classes");
+    openapiFields.add("realms");
 
     // a set of required properties/fields (JSON key names)
     openapiRequiredFields = new HashSet<String>();
-    openapiRequiredFields.add("classes");
+    openapiRequiredFields.add("realms");
   }
 
  /**
@@ -207,14 +207,14 @@ public class RealmsIndexDTO {
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       // ensure the json data is an array
-      if (!jsonObj.get("classes").isJsonArray()) {
-        throw new IllegalArgumentException(String.format("Expected the field `classes` to be an array in the JSON string but got `%s`", jsonObj.get("classes").toString()));
+      if (!jsonObj.get("realms").isJsonArray()) {
+        throw new IllegalArgumentException(String.format("Expected the field `realms` to be an array in the JSON string but got `%s`", jsonObj.get("realms").toString()));
       }
 
-      JsonArray jsonArrayclasses = jsonObj.getAsJsonArray("classes");
-      // validate the required field `classes` (array)
-      for (int i = 0; i < jsonArrayclasses.size(); i++) {
-        IndexRealmDataDTO.validateJsonElement(jsonArrayclasses.get(i));
+      JsonArray jsonArrayrealms = jsonObj.getAsJsonArray("realms");
+      // validate the required field `realms` (array)
+      for (int i = 0; i < jsonArrayrealms.size(); i++) {
+        IndexRealmDataDTO.validateJsonElement(jsonArrayrealms.get(i));
       };
   }
 
